# 3d-shit

./: .gitignore  CMakeLists.txt  run.sh
src/: cell.hpp  chunk.cpp  chunk.hpp  cool-chunk.cpp  cool-chunk.hpp  main.cpp  main.hpp
